# chessrobot_UR3_aruco

./: README.md
aruco_broadcaster/: CMakeLists.txt  package.xml
aruco_broadcaster/config/: pl2esaii.yaml  tablesetup-pl2esaii.yaml  tablesetup-pl2esaii_sim.yaml
aruco_broadcaster/launch/: aruco_pl2.launch
aruco_broadcaster/src/: aruco_broadcaster.cpp
aruco_broadcaster/srv/: getMarkerTf.srv
downward_ros/: CMakeLists.txt  README.md  package.xml
downward_ros/launch/: downward_service.launch  downward_test.launch
downward_ros/pddl/: my_chess_world_problem
downward_ros/src/: downward_client.py  downward_server.py
downward_ros/srv/: Plan.srv
fmauch_universal_robot/universal_robots/: package.xml
fmauch_universal_robot/ur_description/urdf/: ur10.urdf.xacro  ur3.urdf.xacro  ur5.urdf.xacro
fmauch_universal_robot/ur_e_description/urdf/: ur10e.urdf.xacro  ur16e.urdf.xacro  ur3e.urdf.xacro  ur5e.urdf.xacro
kinenik/: CMakeLists.txt  README.md
kinenik/doc/universal_robots/test/: check_points.txt  ur5_data.txt
kinenik/src/: kinenikConfig.cmake.in  kinenik_ur.cpp  test_kinenik_ur.cpp  test_kinenik_ur5.cpp
robotiq/robotiq_2f_gripper_server/: CMakeLists.txt  package.xml
robotiq/robotiq_2f_gripper_server/launch/: gripper_server.launch
robotiq/robotiq_2f_gripper_server/src/: gripper_client.cpp  gripper_server.cpp
robotiq/robotiq_2f_gripper_server/srv/: Cmd.srv  Move.srv  Status.srv
robotiq/robotiq_2f_model/model/: robotiq_2f_85.urdf.xacro  robotiq_ur_coupler.urdf.xacro
tablesens/: CMakeLists.txt  README.md  notes.txt  package.xml
tablesens/conf/: param-example.yaml  rviz_init.rviz  tablesetup-esaii-pl2.yaml  tablesetup-ioc-aruco.yaml  tablesetup-ioc.yaml  tablesetup.yaml
tablesens/include/tablesens/: transformpool.h
tablesens/launch/: ar_track_alvar_kinect.launch  aruco_kinect2.launch  aruco_realsense.launch  aruco_single_kinect.launch.xml  kinect2_bridge_hq.launch  marker_publisher.launch  realsense_camera.launch  tablecalibrator.launch  tablecalibrator_kinect2.launch  test_markers_kinect2.launch  usb_cam_ms.launch
tablesens/msg/: markerFix.msg  markerFixList.msg
tablesens/srv/: configureFromService.srv
test_hardware/: .directory  CMakeLists.txt  package.xml
test_hardware/launch/: test_hardware_demo.launch.xml  test_real_scenario.launch  test_simulated_scenario.launch
test_hardware/src/: gripper_action_client.cpp  ur3_action_client.cpp
