<?xml version="1.0"?>
<package format="2">
  <name>test_hardware</name>
  <version>0.0.0</version>
  <description>The test_hardware package</description>

  <maintainer email="jan.rosell@upc.edu">linux</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>message_generation</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>ur_description</depend>
  <depend>ur_gazebo</depend>
  <depend>roboticsgroup_gazebo_plugins</depend>
  <depend>robotiq_2f_gripper_server</depend>
  <depend>robotiq_2f_gripper_control</depend>
  <depend>robotiq_modbus_rtu</depend>
  <exec_depend>chesslab_setup</exec_depend>
</package>
