<?xml version="1.0"?>
<package format="2">
  <name>robotiq_2f_gripper_server</name>
  <version>0.0.0</version>
  <description>The robotiq_2f_gripper_server package</description>

  <maintainer email="jan.rosell@upc.edu">linux</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>robotiq_2f_gripper_control</depend>
  <depend>robotiq_modbus_rtu</depend>
</package>
